--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,16 @@ version: '1.5'
 services:
 
   postgres-db:
-    build: ./database/
+    build: 
+      context: ./database/
+      dockerfile: Dockerfile
     ports:
       - 5432:5432
     container_name: postgres-db-pizza
+    hostname: postgres-db
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+      - ./database/sql:/sql
     networks:
       - nt-pizza
 
