--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,10 +8,15 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5432:5432
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=aalonso
+      - POSTGRES_PASSWORD=ITBA
     container_name: postgres-db-pizza
     hostname: postgres-db
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      #- ./postgres-data:/var/lib/postgresql/data
       - ./database/sql:/sql
     networks:
       - nt-pizza
